--- a/templates/base.html
+++ b/templates/base.html
@@ -298,6 +298,7 @@
   <script src="static/app/scripts/services/groupservices.js"></script>
   <script src="static/app/scripts/services/showservices.js" ></script>
   <script src="static/app/scripts/services/noteservices.js" ></script>
+  <script src="static/app/scripts/services/commentservices.js" ></script>
 
   <script src="static/app/scripts/app.js" ></script>
   <script src="static/app/scripts/controllers/accountcontrollers.js" ></script>
