--- a/templates/accounts/show.html
+++ b/templates/accounts/show.html
@@ -112,9 +112,9 @@
                                 <div class="message">
                                   <span class="arrow"></span>
                                   <a href="#" class="name"><%= topic.last_updater.google_display_name%></a>
-                                  <span class="datetime">at <%=topic.updated_at %> </span>
+                                  <span class="datetime">at <%=topic.updated_at | date:'yyyy-MM-dd - HH:mm:ss '  %> </span>
                                   <span class="body">
-                                  <a href="/#/notes/show/<%=topic.id%>" class="discussion-content"><strong class="ng-binding"><%= topic.title%></strong><span class="excerpt ng-binding"> - <%= topic.excerpt%></span><span class="chat-meta pull-right" ng-show="topic.comments"><i class="icon-comment"></i> <%= topic.comments%> comments</span></a>
+                                  <a href="/#/notes/show/<%=topic.discussionId%>" class="discussion-content"><strong class="ng-binding"><%= topic.title%></strong><span class="excerpt ng-binding"> - <%= topic.excerpt%></span><span class="chat-meta pull-right" ng-show="topic.comments"><i class="icon-comment"></i> <%= topic.comments%> comments</span></a>
                                   </span>
                                 </div>
                               </li>
@@ -151,7 +151,7 @@
                                     <li>(415) 663-4433  <a href="#"><img class="ctodeal" src="static/img/phone-icon.png" /></a></li>
                                     <li>(415) 663-4433 <a href="#"><img class="ctodeal" src="static/img/phone-icon.png" /></a></li>
                                     <li>(415) 663-4433 <a href="#"><img class="ctodeal" src="static/img/phone-icon.png"/></a></li>
-                                    <li><a href="#"><i class="icon-plus"></i> Add a new phone number </a></li>
+                                    <li><a href="#phonemodal"  class="btn-link addAnotherPhone" data-toggle="modal"><i class="icon-plus"></i>Add a new Phone</a></li>
 
                                   </ul>
                                 <div class="news-block-tags">
@@ -162,7 +162,7 @@
                                     <li>contact@clicandcal.com  </li>
                                     <li>sales@clicandcal.com </li>
                                     <li>support@clicandcal.com </li>
-                                    <li><a href="#"><i class="icon-plus"></i> Add a new email address </a></li>
+                                    <li><a href="#emailmodal" class="btn-link addAnotherPhone" data-toggle="modal"><i class="icon-plus"></i> Add a new email address </a></li>
 
                                   </ul>
                                 <div class="news-block-tags">
@@ -172,8 +172,9 @@
                                  <ul class="unstyled contact-infos">
                                     <li>760 Market Street, 11th Floor San Francisco, CA 94102  </li>
                                     
-                                    <li><a href="#"><i class="icon-plus"></i> Add a new address </a></li>
+                                    <li><a href="#addressmodal" class="btn-link addAnotherPhone" data-toggle="modal"><i class="icon-plus"></i> Add a new address </a></li>
 
+                  
                                   </ul>
 
                                                               
@@ -187,6 +188,7 @@
                                 </div>
                                 <ul class="unstyled contact-infos">
                                     <li><a href="#">www.clicandcal.com</a> </li>
+                                    <li><a href="#websitemodal" class="btn-link addAnotherPhone" data-toggle="modal"><i class="icon-plus"></i> Add a new Website </a></li>
                                 </ul> 
                                 <div class="news-block-tags">
                                   <strong>Social Links</strong>
@@ -194,6 +196,7 @@
                                 </div>
                                 <ul class="unstyled contact-infos">
                                     <li><a href="#">facebook.com/clicandcal</a> </li>
+                                    <li><a href="#socialmodal" class="btn-link addAnotherPhone" data-toggle="modal"><i class="icon-plus"></i> Add a new social links </a></li>
                                 </ul>                       
                               </div>
                           </div>
@@ -626,20 +629,185 @@
                           <input type="text"  required id="id_industry" ng-model="account.industry">
                           
                         </div>
-                    </div>                      
-                  
-                     
-                    
-                  
-                
+                    </div>                
               </div>
               <div class="modal-footer">
                 <button class="btn" data-dismiss="modal" aria-hidden="true">{{_("Close")}}</button>
                 <button  type="submit" class="btn btn-primary addContactNow">{{_("Save")}} </button>
               </div>
                </form>
-              </div> 
+            </div>
+
+
+      <!--HKA 18.11.2013 Add Phone Modal -->
+
+
+    <div id="phonemodal" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+                <h3 id="myModalLabel">{{_("Add Phone")}}</h3>
+            </div>
+            <div class="modal-body">
+                  <form id="addPhone" name="addphone" ng-submit="save(phone)" class="form-horizontal"> 
+                  <fieldset>
+                    <div class="control-group">
+                        <label  class="control-label">{{_("Type")}} </label>
+                        <div class="controls">
+                          <input type="text" placeholder="home, work, mobile, other..." required id="id_name" ng-model="phone.typr">
+                        </div>
+                     </div>
+                     <div class="control-group">
+                        <label  class="required control-label">{{_("Number")}}</label>
+                       
+                        <div class="controls">
+                          <input type="text"  id="id_name" ng-model="phone.number">
+                          
+                        </div>
+                     </div>
+              </div>
+              <div class="modal-footer">
+                  <button class="btn" data-dismiss="modal" aria-hidden="true">Cancel</button>
+              
+                  <input ng-hide="isLoading" type="submit" class="btn green" value="Add this phone">
+                  <input ng-show="isLoading" type="submit" class="btn green" value="Loading..." disabled>
+              </div>
+                </form>
+    </div>
+
+
+ <!--HKA 18.11.2013 Add Email -->
+
+     <div id="emailmodal" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+                <h3 id="myModalLabel">{{_("Add Email")}}</h3>
+            </div>
+            <div class="modal-body">
+                  <form id="addEmail" name="addemail" ng-submit="save(email)" class="form-horizontal"> 
+                  <fieldset>
+                    <div class="control-group">
+                        <label  class="control-label">{{_("Email")}} </label>
+                        <div class="controls">
+                          <input type="text" placeholder="Email" required id="id_email" ng-model="email.">
+                        </div>
+                     </div>
+              </div>
+              <div class="modal-footer">
+                  <button class="btn" data-dismiss="modal" aria-hidden="true">Cancel</button>
+              
+                  <input ng-hide="isLoading" type="submit" class="btn green" value="Add this phone">
+                  <input ng-show="isLoading" type="submit" class="btn green" value="Loading..." disabled>
+              </div>
+                </form>
         </div>
+
+      <!--HKA 18.11.2013  Adresse Modal  -->
+
+    <div id="addressmodal" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+                <h3 id="myModalLabel">{{_("Add Address")}}</h3>
+            </div>
+            <div class="modal-body">
+                  <form id="addEmail" name="addemail" ng-submit="save(email)" class="form-horizontal"> 
+                  <fieldset>
+                    <div class="control-group">
+                        <label  class="control-label">{{_("Street")}} </label>
+                        <div class="controls">
+                          <input type="text" placeholder="Email" required id="id_email" ng-model="email.">
+                        </div>
+                     </div>
+                     <div class="control-group">
+                        <label  class="control-label">{{_("City")}} </label>
+                        <div class="controls">
+                          <input type="text"  required id="id_email" ng-model="email.">
+                        </div>
+                     </div>
+                     <div class="control-group">
+                        <label  class="control-label">{{_("State/Province")}} </label>
+                        <div class="controls">
+                          <input type="text" required id="id_email" ng-model="email.">
+                        </div>
+                     </div>
+                     <div class="control-group">
+                        <label  class="control-label">{{_("Postal Code")}} </label>
+                        <div class="controls">
+                          <input type="text"  required id="id_email" ng-model="email.">
+                        </div>
+                     </div>
+                     <div class="control-group">
+                        <label  class="control-label">{{_("Country")}} </label>
+                        <div class="controls">
+                          <input type="text"  required id="id_email" ng-model="email.">
+                        </div>
+                     </div>
+              </div>
+              <div class="modal-footer">
+                  <button class="btn" data-dismiss="modal" aria-hidden="true">Cancel</button>
+              
+                  <input ng-hide="isLoading" type="submit" class="btn green" value="Add this address">
+                  <input ng-show="isLoading" type="submit" class="btn green" value="Loading..." disabled>
+              </div>
+                </form>
+        </div>
+
+    <!--HKA 18.11.2013 Website Modal -->
+
+
+    <div id="websitemodal" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+                <h3 id="myModalLabel">{{_("Add Website")}}</h3>
+            </div>
+            <div class="modal-body">
+                  <form id="addWebsite" name="addwebsite" ng-submit="save(website)" class="form-horizontal"> 
+                  <fieldset>
+                    <div class="control-group">
+                        <label  class="control-label">{{_("Website")}} </label>
+                        <div class="controls">
+                          <input type="text" placeholder="Website" required id="id_email" ng-model="email.">
+                        </div>
+                     </div>
+              </div>
+              <div class="modal-footer">
+                  <button class="btn" data-dismiss="modal" aria-hidden="true">Cancel</button>
+              
+                  <input ng-hide="isLoading" type="submit" class="btn green" value="Add this Website">
+                  <input ng-show="isLoading" type="submit" class="btn green" value="Loading..." disabled>
+              </div>
+                </form>
+        </div>
+
+    <!--HKA 18.11.2013 Social modal -->
+
+
+    <div id="socialmodal" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+                <h3 id="myModalLabel">{{_("Add Social link")}}</h3>
+            </div>
+            <div class="modal-body">
+                  <form id="addSocial" name="addsocial" ng-submit="save(website)" class="form-horizontal"> 
+                  <fieldset>
+                    <div class="control-group">
+                        <label  class="control-label">{{_("Social link")}} </label>
+                        <div class="controls">
+                          <input type="text"  required id="id_email" ng-model="email.">
+                        </div>
+                     </div>
+              </div>
+              <div class="modal-footer">
+                  <button class="btn" data-dismiss="modal" aria-hidden="true">Cancel</button>
+              
+                  <input ng-hide="isLoading" type="submit" class="btn green" value="Add this Social link">
+                  <input ng-show="isLoading" type="submit" class="btn green" value="Loading..." disabled>
+              </div>
+                </form>
+        </div>
+
+
+
+      </div>
       <!-- END PAGE CONTAINER-->
 </div>
 <script type="text/javascript">
