--- a/templates/sign-in.html
+++ b/templates/sign-in.html
@@ -29,88 +29,7 @@
     s.parentNode.insertBefore(po, s);
   })();
   </script>
-</head>
-
-<body class="page-header-fixed">
-  <!-- BEGIN HEADER -->   
-  <div class="header navbar navbar-inverse navbar-fixed-top">
-    <!-- BEGIN TOP NAVIGATION BAR -->
-    <div class="navbar-inner">
-      <div class="container-fluid">
-        <!-- BEGIN LOGO -->
-        <a class="brand" href="index.html">
-        <img src="static/img/iogrow_gool.png" width="125" alt="logo"  /> 
-        </a>
-        <!-- END LOGO -->
-        <!-- BEGIN RESPONSIVE MENU TOGGLER -->
-        <a href="javascript:;" class="btn-navbar collapsed" data-toggle="collapse" data-target=".nav-collapse">
-        <img src="static/img/menu-toggler.png" alt="" />
-        </a>   
-        <div class="create-google pull-right">
-             Don't have a Google Account?
-             <a href="https://accounts.google.com/SignUp" target="_blank" class="">CREATE A GOOGLE ACCOUNT</a>
-        </div>
-            
-
-           
-       
-        
-        
-        <!-- END TOP NAVIGATION MENU --> 
-      </div>
-    </div>
-    <!-- END TOP NAVIGATION BAR -->
-  </div>
-<div ng-view class="page-container row-fluid">
-      <div class="inner-product-info">
-              <div class="container">
-                <div class="row-fluid margin-bottom-20">
-                  <div class="span8 margin-bottom-20 product-info">
-                    <h2>Metronic Viverra</h2>
-                    <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos <a href="#">ellentesque la vehi</a> dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique. Pellentesque viverra vehicula sem ut volutpat. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut non libero magna. Sed et quam lacus. Fusce condimentum eleifend enim a feugiat.</p>
-                    <p>Lunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga. Et harum quidem rerum facilis est et expedita <a href="#">distinctio lorem ipsum dolor</a> sit amet, consectetur adipiscing elit. Ut non libero consectetur adipiscing elit magna. Sed et quam lacus. Fusce condimentum eleifend enim a feugiat.</p>
-                  </div>
-                  <div class="span4 margin-bottom-20">
-                     <div class="signin-box"> 
-                      <div id="gConnect">
-                          <button class="g-signin"
-                              data-scope="https://www.googleapis.com/auth/plus.login https://www.googleapis.com/auth/userinfo.email https://www.googleapis.com/auth/drive"
-                              data-requestvisibleactions="http://schemas.google.com/AddActivity"
-                              data-clientId="{{ CLIENT_ID }}"
-                              data-accesstype="offline"
-                              data-callback="onSignInCallback"
-                              data-theme="dark"
-                              data-cookiepolicy="single_host_origin"
-                              data-width="wide"
-                              data-height="tall">
-                          </button>
-                      </div>
-                     </div>
-                  </div>
-                </div>
-                
-                
-              </div>
-            </div>
-    
-
-    
-          
-    
-    <!-- END PAGE -->    
-  </div>
-  <!-- END CONTAINER -->
-  <!-- BEGIN FOOTER -->
-  <div class="footer">
-    <div class="footer-inner">
-      2013 &copy; Metronic by keenthemes.
-    </div>
-   
-  </div>
-  <!-- END FOOTER -->
-  <!-- BEGIN JAVASCRIPTS(Load javascripts at bottom, this will reduce page load time) -->
-  <!-- BEGIN CORE PLUGINS -->   
-  <script src="static/plugins/jquery-1.10.1.min.js"  type="text/javascript"></script>
+   <script src="static/plugins/jquery-1.10.1.min.js"  type="text/javascript"></script>
   <script src="static/plugins/jquery-migrate-1.2.1.min.js"  type="text/javascript"></script>
   <script type="text/javascript">
 var helper = (function() {
@@ -208,11 +127,11 @@ var helper = (function() {
         success: function(result) {
           console.log('i am in connectServer show me result please');
           console.log(result);
-          if (result==false){
-             window.location.replace('/');
+          if (result==true){
+             window.location.replace('/sign-up');
           }
           else{
-            window.location.replace('/sign-up');
+            window.location.replace('/');
           }
          // helper.people();
         },
@@ -258,59 +177,101 @@ var helper = (function() {
  * Perform jQuery initialization and check to ensure that you updated your
  * client ID.
  */
-$(document).ready(function() {
-  $('#disconnect').click(helper.disconnectServer);
-  if ($('[data-clientid="YOUR_CLIENT_ID"]').length > 0) {
-    alert('This sample requires your OAuth credentials (client ID) ' +
-        'from the Google APIs console:\n' +
-        '    https://code.google.com/apis/console/#:access\n\n' +
-        'Find and replace YOUR_CLIENT_ID with your client ID and ' +
-        'YOUR_CLIENT_SECRET with your client secret in the project sources.'
-    );
-  }
-});
 
+function onSignInCallback(authResult) {
+  helper.onSignInCallback(authResult);
+}
 /**
  * Calls the helper method that handles the authentication flow.
  *
  * @param {Object} authResult An Object which contains the access token and
  *   other authentication information.
  */
-function onSignInCallback(authResult) {
-  helper.onSignInCallback(authResult);
-}
+
 </script>
-  <script src="static/app/scripts/vendor/angular.js" ></script>
-  <script src="static/app/scripts/vendor/ui-bootstrap-0.5.0.js" ></script>
-  <script src="static/app/scripts/vendor/ui-bootstrap-tpls-0.5.0.js"></script>
+</head>
 
+<body class="page-header-fixed">
+  <!-- BEGIN HEADER -->   
+  <div class="header navbar navbar-inverse navbar-fixed-top">
+    <!-- BEGIN TOP NAVIGATION BAR -->
+    <div class="navbar-inner">
+      <div class="container-fluid">
+        <!-- BEGIN LOGO -->
+        <a class="brand" href="index.html">
+        <img src="static/img/iogrow_gool.png" width="125" alt="logo"  /> 
+        </a>
+        <!-- END LOGO -->
+        <!-- BEGIN RESPONSIVE MENU TOGGLER -->
+        <a href="javascript:;" class="btn-navbar collapsed" data-toggle="collapse" data-target=".nav-collapse">
+        <img src="static/img/menu-toggler.png" alt="" />
+        </a>   
+        <div class="create-google pull-right">
+             Don't have a Google Account?
+             <a href="https://accounts.google.com/SignUp" target="_blank" class="">CREATE A GOOGLE ACCOUNT</a>
+        </div>
+            
 
-  <script src="static/app/scripts/services/accountservices.js"></script>
-  
+           
+       
+        
+        
+        <!-- END TOP NAVIGATION MENU --> 
+      </div>
+    </div>
+    <!-- END TOP NAVIGATION BAR -->
+  </div>
+<div ng-view class="page-container row-fluid">
+      <div class="inner-product-info">
+              <div class="container">
+                <div class="row-fluid margin-bottom-20">
+                  <div class="span8 margin-bottom-20 product-info">
+                    <h2>Metronic Viverra</h2>
+                    <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos <a href="#">ellentesque la vehi</a> dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique. Pellentesque viverra vehicula sem ut volutpat. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut non libero magna. Sed et quam lacus. Fusce condimentum eleifend enim a feugiat.</p>
+                    <p>Lunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga. Et harum quidem rerum facilis est et expedita <a href="#">distinctio lorem ipsum dolor</a> sit amet, consectetur adipiscing elit. Ut non libero consectetur adipiscing elit magna. Sed et quam lacus. Fusce condimentum eleifend enim a feugiat.</p>
+                  </div>
+                  <div class="span4 margin-bottom-20">
+                     <div class="signin-box"> 
+                      <div id="gConnect">
+                          <button class="g-signin"
+                              data-scope="https://www.googleapis.com/auth/plus.login https://www.googleapis.com/auth/userinfo.email https://www.googleapis.com/auth/drive"
+                              data-requestvisibleactions="http://schemas.google.com/AddActivity"
+                              data-clientId="{{ CLIENT_ID }}"
+                              data-accesstype="offline"
+                              data-callback="onSignInCallback"
+                              data-theme="dark"
+                              data-cookiepolicy="single_host_origin"
+                              data-width="wide"
+                              data-height="tall">
+                          </button>
+                      </div>
+                     </div>
+                  </div>
+                </div>
+                
+                
+              </div>
+            </div>
+    
 
-  <!--script src="static/app/scripts/services/services.js" ></script-->
-  <script src="static/app/scripts/services/topicservices.js" ></script>
+    
+          
+    
+    <!-- END PAGE -->    
+  </div>
+  <!-- END CONTAINER -->
+  <!-- BEGIN FOOTER -->
+  <div class="footer">
+    <div class="footer-inner">
+      2013 &copy; Metronic by keenthemes.
+    </div>
+   
+  </div>
+  <!-- END FOOTER -->
+  <!-- BEGIN JAVASCRIPTS(Load javascripts at bottom, this will reduce page load time) -->
+  <!-- BEGIN CORE PLUGINS -->   
+ 
 
-  <script src="static/app/scripts/app.js" ></script>
-  <script src="static/app/scripts/controllers/accountcontrollers.js" ></script>
-  <script src="static/app/scripts/controllers/contactcontroller.js"></script>  
-  <script src="static/app/scripts/controllers/opportunitycontroller.js" ></script>
-  
-
-  <script src="static/app/scripts/controllers/leadcontrollers.js" ></script>
-  <script src="static/app/scripts/services/leadservices.js" ></script>
-  <!-- IMPORTANT! Load jquery-ui-1.10.1.custom.min.js before bootstrap.min.js to fix bootstrap tooltip conflict with jquery ui tooltip -->
-  <script src="static/plugins/jquery-ui/jquery-ui-1.10.1.custom.min.js" type="text/javascript"></script>      
-  <script src="static/plugins/bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
-  <script src="static/plugins/bootstrap-hover-dropdown/twitter-bootstrap-hover-dropdown.min.js" type="text/javascript" ></script>
-  <!--[if lt IE 9]>
-  <script src="static/plugins/excanvas.min.js"></script>
-  <script src="static/plugins/respond.min.js"></script>  
-  <![endif]-->   
-  <script src="static/plugins/jquery-slimscroll/jquery.slimscroll.min.js" type="text/javascript"></script>
-  <script src="static/plugins/jquery.blockui.min.js" type="text/javascript"></script>  
-  <script src="static/plugins/jquery.cookie.min.js" type="text/javascript"></script>
-  <script src="static/plugins/uniform/jquery.uniform.min.js" type="text/javascript" ></script>
   <!-- END CORE PLUGINS -->
   
 
