--- a/templates/base.html
+++ b/templates/base.html
@@ -215,7 +215,7 @@
        window.is_signed_in = false;
        window.authResult = undefined;
        var apisToLoad;
-       var ROOT = '/_ah/api';
+       var ROOT = 'https://gcdc2013-iogrow.appspot.com/_ah/api';
        var callback = function() {
         if (--apisToLoad == 0) {
           apiLoaded();
@@ -274,7 +274,7 @@
 
 
 
-
+  <script src="static/app/scripts/services/productservices.js"></script>
   <script src="static/app/scripts/services/accountservices.js"></script>
   <script src="static/app/scripts/services/contactservices.js"></script>
   <script src="static/app/scripts/services/opportunityservices.js"></script>
@@ -292,6 +292,7 @@
   <script src="static/app/scripts/services/commentservices.js" ></script>
 
   <script src="static/app/scripts/app.js" ></script>
+   <script src="static/app/scripts/controllers/productcontrollers.js" ></script>
   <script src="static/app/scripts/controllers/accountcontrollers.js" ></script>
   <script src="static/app/scripts/controllers/contactcontroller.js"></script>  
   <script src="static/app/scripts/controllers/opportunitycontroller.js" ></script>
