--- a/templates/base.html
+++ b/templates/base.html
@@ -215,7 +215,7 @@
        window.is_signed_in = false;
        window.authResult = undefined;
        var apisToLoad;
-       var ROOT = '/_ah/api';
+       var ROOT = 'https://gcdc2013-iogrow.appspot.com/_ah/api';
        var callback = function() {
         if (--apisToLoad == 0) {
           apiLoaded();
