--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1087,7 +1087,7 @@ Footer
 .footer {
   padding: 8px 20px 5px 20px; 
   font-size: 12px;
-  position: absolute;
+  position: fixed;
   bottom: 0;
 }
 
