--- a/templates/base.html
+++ b/templates/base.html
@@ -215,7 +215,7 @@
        window.is_signed_in = false;
        window.authResult = undefined;
        var apisToLoad;
-       var ROOT = '/_ah/api';
+       var ROOT = 'https://gcdc2013-iogrow.appspot.com/_ah/api';
        var callback = function() {
         if (--apisToLoad == 0) {
           apiLoaded();
@@ -298,6 +298,8 @@
   <script src="static/app/scripts/controllers/opportunitycontroller.js" ></script>
   <script src="static/app/scripts/controllers/showcontrollers.js" ></script>
   <script src="static/app/scripts/controllers/notecontrollers.js"></script> 
+  <script src="static/app/scripts/controllers/taskcontrollers.js"></script>
+  <script src="static/app/scripts/controllers/eventcontrollers.js"></script>
   <!--Admin controllers-->
   <script src="static/app/scripts/controllers/usercontrollers.js" ></script>
   <script src="static/app/scripts/controllers/groupcontrollers.js" ></script>
