--- a/templates/cases/case_show.html
+++ b/templates/cases/case_show.html
@@ -43,10 +43,10 @@
                 
             <h2>
             <a href="/#/cases/" data-toggle="tooltip" data-placement="bottom" title="Back to Cases">
-            <img onload="this.__gwtLastUnhandledEvent=&quot;load&quot;;" src="https://admin.google.com/a/cpanel/gwt/cpanelnew/resources/clear.cache.gif" style="width: 21px; height: 21px; background-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABUAAAAVCAYAAACpF6WWAAAAP0lEQVR42mNgGAXDApRT28AGIP5PCwP/08LA/9QKw/9kYLyggxaGYjMYHyApiBpoYSixSYqsyGwYzf+jgDQAAJylMNOnx10yAAAAAElFTkSuQmCC); background-position: 0px 0px; background-repeat: no-repeat no-repeat;" border="0" class="gwt-Image GI4HA0EPK cbarOpacity" aria-hidden="false"></a>     {{_("Cases")}} > <%=casee.description %></h2>
+            <img onload="this.__gwtLastUnhandledEvent=&quot;load&quot;;" src="https://admin.google.com/a/cpanel/gwt/cpanelnew/resources/clear.cache.gif" style="width: 21px; height: 21px; background-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABUAAAAVCAYAAACpF6WWAAAAP0lEQVR42mNgGAXDApRT28AGIP5PCwP/08LA/9QKw/9kYLyggxaGYjMYHyApiBpoYSixSYqsyGwYzf+jgDQAAJylMNOnx10yAAAAAElFTkSuQmCC); background-position: 0px 0px; background-repeat: no-repeat no-repeat;" border="0" class="gwt-Image GI4HA0EPK cbarOpacity" aria-hidden="false"></a>     {{_("Cases")}} > <%=casee.name %></h2>
             
-
-           <span>{{_("Status")}}: </span><span><span><a class="tag" href="#">#<%=casee.status %></a></span>
+           <span>{{_("Priority")}}: </span><span><a class="tag" href="#">#<%=casee.priority %></a></span><br>
+           <span>{{_("Status")}}: </span><span><a class="tag" href="#">#<%=casee.status %></a></span>
             <br><span>{{_("Type")}}: </span><span><span><a class="tag" href="#">#<%=casee.type_case %></a></span> <br>
             <span class="page-meta"><i class="icon-pencil"><a ng-click="editcase()" class="btn-link addAnotherPhone" data-toggle="modal" > {{_("Edit")}}</a></i> |  <i class="icon-trash"><a ng-click="delete(case)" class="btn-link addAnotherPhone"> {{_("Delete")}}</a></i></span>
 
@@ -127,7 +127,7 @@
                                     <li ng-repeat="task in tasks" id="task_<%=$index%>">
                                       <input value="check1" type="checkbox">
                                       <!-- Name -->
-                                    <span><a href="/tasks/1" class="discussion-content"><%= task.title%> <span ng-show="task.due"> [before: <%= task.due | date:'yyyy-MM-dd '%>]</span></a></span>
+                                    <span><a href="/#/tasks/show/<%=task.id%>" class="discussion-content"><%= task.title%> <span ng-show="task.due"> [before: <%= task.due | date:'yyyy-MM-dd '%>]</span></a></span>
                                     </li>
                                     
                                     <li><a href="#myModal" class="btn-link addAnotherPhone" data-toggle="modal"><i class="icon-plus"></i>Add a new task</a></li>
@@ -261,21 +261,29 @@
                         </div>
                     </div>
                     <div class="control-group">
-                        <label  class="required control-label">{{_("Type")}}</label>
+                        <label  class="required control-label">{{_("Priority")}}</label>
                        
                         <div class="controls">
-                          <input type="text"  id="id_type" ng-model="casee.type_case">
+                          <input type="text"  id="id_priority" ng-model="casee.priority">
                           
                         </div>
                     </div>
                     <div class="control-group">
-                        <label  class="required control-label">{{_("Status")}} *</label>
+                        <label  class="required control-label">{{_("Status")}} </label>
                        
                         <div class="controls">
                           <input type="text"  required id="id_status" ng-model="casee.status">
                           
                         </div>
-                    </div>                      
+                    </div>
+                    <div class="control-group">
+                        <label  class="required control-label">{{_("Labels")}} </label>
+                       
+                        <div class="controls">
+                          <input type="text"  required id="id_type_case" ng-model="casee.type_case">
+                          
+                        </div>
+                    </div>                       
                   
                      
                     
